--- a/꾹꾹이/Base.lproj/Main.storyboard
+++ b/꾹꾹이/Base.lproj/Main.storyboard
@@ -108,18 +108,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="LFc-lX-lx7">
-                                <rect key="frame" x="0.0" y="104" width="375" height="459"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eXa-EV-uA4">
+                                <rect key="frame" x="147" y="178" width="80" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cfa-6V-uUJ">
+                                <rect key="frame" x="67" y="219" width="240" height="280"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgB-vz-40g">
+                                <rect key="frame" x="0.0" y="64" width="194" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="clickLeft:" destination="aZW-67-nt2" eventType="touchUpInside" id="OSX-k5-s7f"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="925-2G-Dka">
+                                <rect key="frame" x="196" y="64" width="179" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="clickRight:" destination="aZW-67-nt2" eventType="touchUpInside" id="SwQ-0h-4wy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="강아지" id="1dw-YR-NLE"/>
+                    <connections>
+                        <outlet property="boneImage" destination="eXa-EV-uA4" id="oVq-qA-mqr"/>
+                        <outlet property="dogImage" destination="Cfa-6V-uUJ" id="6GA-tK-r9M"/>
+                        <outlet property="leftButton" destination="wgB-vz-40g" id="n7c-57-nrR"/>
+                        <outlet property="rightButton" destination="925-2G-Dka" id="9gT-hF-tVn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="elr-Jv-Zwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2357.5999999999999" y="837.93103448275872"/>
+            <point key="canvasLocation" x="2935.1999999999998" y="840.62968515742136"/>
         </scene>
         <!--눈-->
         <scene sceneID="xXS-77-7ej">
@@ -170,7 +194,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6W-Nx-ZHO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3000.8000000000002" y="918.89055472263874"/>
+            <point key="canvasLocation" x="3567" y="878"/>
         </scene>
         <!--Light View Controller-->
         <scene sceneID="an8-Bc-Qsb">
@@ -457,7 +481,6 @@
     <resources>
         <image name="2" width="192" height="191"/>
         <image name="blueCircle" width="256" height="256"/>
-        <image name="dog" width="512" height="512"/>
         <image name="paw2" width="45" height="42"/>
         <image name="redCircle" width="256" height="256"/>
         <image name="스크린샷 2018-07-31 오후 2.57.26" width="50" height="50"/>
